--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "karma-osx-reporter": "^0.2.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.2.5",
-    "phantomjs": "^1.9.17"
+    "phantomjs": "^2.0.0-alpha"
   },
   "dependencies": {
+    "dom4": "^1.4.5",
+    "raf": "^3.0.0",
     "verge": "^1.9.1"
   }
 }
