remove packages that are not needed and update coffeeify temporarily

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maximus",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "",
   "main": "index.coffee",
   "scripts": {
@@ -25,13 +25,11 @@
     "brfs": "^1.4.0",
     "chai": "^2.3.0",
     "coffee-script": "^1.9.3",
-    "coffeeify": "^1.1.0",
+    "coffeeify": "britco/coffeeify#master",
     "karma": "^0.12.33",
     "karma-browserify": "^4.2.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.12",
-    "karma-cli": "0.0.4",
-    "karma-coffee-preprocessor": "^0.2.1",
     "karma-mocha": "^0.1.10",
     "karma-osx-reporter": "^0.2.0",
     "karma-phantomjs-launcher": "^0.1.4",
